TINY-6735 Fixed an issue with external styles (in this case focus box-shadow) bleeding into TinyMCE

--- a/modules/oxide/src/less/theme/globals/reset.less
+++ b/modules/oxide/src/less/theme/globals/reset.less
@@ -10,6 +10,7 @@
 //
 
 .tox {
+  box-shadow: none;
   box-sizing: content-box;
   color: @color-black;
   cursor: auto;
@@ -49,6 +50,7 @@
     // remaining specific reset styles for properties that shouldn't be inherited
     background: transparent;
     border: 0;
+    box-shadow: none;
     float: none;
     height: auto;
     margin: 0;
